--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -6,6 +6,14 @@ body {
   margin-bottom: 50px;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 #viewContainer {
   margin-left: 20%;
   margin-right: 20%;
