--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -29,4 +29,11 @@
 .menuLink:hover {
   background-color: #ddd;
   color: black;
+  text-decoration: none;
+}
+
+.menuLinkRight:hover {
+  background-color: #ddd;
+  color: black;
+  text-decoration: none;
 }
