Update shelter show page to include reviews

--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -16,4 +16,20 @@
   <div class="shelterActions">
     <%= link_to 'Delete Shelter', "/shelters/#{@shelter.id}", method: :delete %>
   </div>
+  <div class="reviewsBlock">
+    <% @shelter.reviews.each do |review| %>
+      <div>
+        <%= review.title %>
+      </div>
+      <div>
+        Rating: <%= review.rating %>
+      </div>
+      <div>
+        <%= review.content %>
+      </div>
+      <div>
+        <%= image_tag "#{review.image}" %>
+      </div>
+    <% end %>
+  </div>
 </div>
