--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -3,7 +3,7 @@ body {
   margin-top: 0px;
   margin-left: 0px;
   margin-right: 0px;
-  margin-bottom: 50px;
+  margin-bottom: 75px;
 }
 
 a {
@@ -15,9 +15,10 @@ a:hover {
 }
 
 #viewContainer {
-  margin-left: 20%;
-  margin-right: 20%;
-  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  width: 1100px;
 
 }
 
