Update routes, add logic and tests for user stories 5 and 6, update flash alerts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,11 @@
       </div>
     </div>
 
-    <% flash.each do |type, message| %>
+    <div id="flashMessage">
+      <% flash.each do |type, message| %>
         <p><%= message %></p>
       <% end %>
+    </div>
 
     <div id="viewContainer">
       <%= yield %>
