--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -50,6 +50,15 @@ a:hover {
   margin-right: auto;
 }
 
+#flashMessage {
+  margin-top: 40px;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+  padding: 15px;
+}
+
 .effect2
 {
   position: relative;
