--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -20,6 +20,7 @@
         <div class="reviewAttribute">Rating: <%= review.rating %></div>
         <div class="reviewAttribute"><%= review.content %></div>
         <div><%= link_to "Edit Review", "/shelters/#{@shelter.id}/reviews/#{review.id}/edit" %></div>
+        <div><%= link_to "Delete Review", "/shelters/#{@shelter.id}/reviews/#{review.id}", method: :delete %></div>
         <div class="effect2"><%= image_tag "#{review.image}" %></div>
       <% end %>
     </div>
