--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -4,7 +4,7 @@
 <% @pets.each do |pet| %>
   <section id="favorites-<%= pet.id %>">
     <h2><%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
-    <p><img src= <%= "#{pet.image}" %>></p>
+    <p><%= image_tag "#{pet.image}" %></p>
   </section>
 <% end %>
 </div>
