--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,10 +1,10 @@
 <div class="favoritePets">
-<h1>Favorite Pets</h1>
-
-<% @pets.each do |pet| %>
-  <section id="favorites-<%= pet.id %>">
-    <h2><%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
-    <p><%= image_tag "#{pet.image}" %></p>
-  </section>
-<% end %>
+  <h1>Favorite Pets</h1>
+  <% @pets.each do |pet| %>
+    <section id="favorites-<%= pet.id %>">
+      <h2><%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
+      <p><%= image_tag "#{pet.image}" %></p>
+    </section>
+  <% end %>
+  <%= link_to 'Adopt Pet(s)', "/applications/new" %>
 </div>
