--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -1,9 +1,35 @@
 <div class="applicationBlock">
-  <%= form_tag "/applications/new", method: :post do %>
-    <% @favorites.contents.each do |key, pet| %>
-      <div class="adoptCheckBox">
-        <%= "Adopt #{key}" %><%= check_box_tag(:adopt, "#{key}") %>
+  <%= form_tag "/applications", method: :post do %>
+    <h1>Who would you like to adopt today?</h3>
+    <% @pets.each do |pet| %>
+      <div id="pet_<%= pet.id %>">
+        <%= label_tag pet.name %>
+        <%= check_box_tag :adopt, "#{pet.id}" %>
       </div>
     <% end %>
+
+    <h3>Please tell us about yourself:</h3>
+    <%= label_tag :name %>
+    <%= text_field_tag :name %>
+
+    <%= label_tag :address %>
+    <%= text_field_tag :address %>
+
+    <%= label_tag :city %>
+    <%= text_field_tag :city %>
+
+    <%= label_tag :state %>
+    <%= text_field_tag :state %>
+
+    <%= label_tag :zip %>
+    <%= text_field_tag :zip %>
+
+    <%= label_tag :phone %>
+    <%= text_field_tag :phone %>
+
+    <%= label_tag :description %>
+    <%= text_area_tag :description %>%
+
+    <%= submit_tag 'Submit Application' %>
   <% end %>
 </div>
