Update logic and tests for user story 16 to properly account for data from check boxes

--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -4,7 +4,7 @@
     <% @pets.each do |pet| %>
       <div id="pet_<%= pet.id %>">
         <%= label_tag pet.name %>
-        <%= check_box_tag :adopt, "#{pet.id}" %>
+        <%= check_box_tag "adopt_pets[]", pet.id %>
       </div>
     <% end %>
 
