Update pets show page to include a link to all applications for that pet

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -19,4 +19,7 @@
   <div class="petsActions">
     <%= link_to 'Delete Pet', "/pets/#{@pet.id}", method: :delete %>
   </div>
+  <div>
+    <%= link_to 'Applications', "/pets/#{@pet.id}/applications" %>
+  </div>
 </div>
