--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -7,7 +7,8 @@
       <div class="shelterInfoAttribute">City: <%= @shelter.city %></div>
       <div class="shelterInfoAttribute">State: <%= @shelter.state %></div>
       <div class="shelterInfoAttribute">Zip: <%= @shelter.zip %></div>
-      <div class="shelterActions">
+      <div class="shadowSpacer"></div>
+      <div class="shelterActionsBlock">
         <div class="shelterActions"><%= link_to 'Available Pets', "/shelters/#{@shelter.id}/pets" %></div>
         <div class="shelterActions"><%= link_to 'Update Shelter', "/shelters/#{@shelter.id}/edit" %></div>
         <div class="shelterActions"><%= link_to 'Delete Shelter', "/shelters/#{@shelter.id}", method: :delete %></div>
@@ -16,12 +17,15 @@
     </div>
     <div class="shelterColumn2">
       <% @shelter.reviews.each do |review| %>
+      <div class="shelterReviewBlock">
         <div class="reviewTitle"><%= review.title %></div>
         <div class="reviewAttribute">Rating: <%= review.rating %></div>
         <div class="reviewAttribute"><%= review.content %></div>
-        <div id=<%= "editReview_#{review.id}"%>><%= link_to "Edit Review", "/shelters/#{@shelter.id}/reviews/#{review.id}/edit" %></div>
-        <div id=<%= "deleteReview_#{review.id}"%>><%= link_to "Delete Review", "/shelters/#{@shelter.id}/reviews/#{review.id}", method: :delete %></div>
         <div class="effect2"><%= image_tag "#{review.image}" %></div>
+        <div class="reviewActions" id=<%= "editReview_#{review.id}"%>><%= link_to "Edit Review", "/shelters/#{@shelter.id}/reviews/#{review.id}/edit" %></div>
+        <div class="reviewActions" id=<%= "deleteReview_#{review.id}"%>><%= link_to "Delete Review", "/shelters/#{@shelter.id}/reviews/#{review.id}", method: :delete %></div>
+      </div>
+      <div class="shadowSpacer"></div>
       <% end %>
     </div>
   </div>
