--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,40 +1,34 @@
-<div class="createPet">
+<div class="formTemplate">
   <h3><%= link_to "#{@pet.name}", "/pets/#{@pet.id}" %></h3>
+  <div class="effect2"><%= image_tag "#{@pet.image}" %></div>
   <div class="formAlign">
     <%= form_tag "/pets/#{@pet.id}", method: :patch do %>
-
-      <div class="formField">
-        <%= label_tag :image %>
-        <%= text_field_tag :image, @pet.image %>
+      <div>
+        <p>Name:</p>
+        <%= text_field_tag :name, @pet.name, class: "formField" %>
       </div>
-
-      <div class="formField">
-        <%= label_tag :name %>
-        <%= text_field_tag :name, @pet.name %>
+      <div>
+        <p>Description:</p>
+        <%= text_field_tag :description, @pet.description, class: "formField" %>
       </div>
-
-      <div class="formField">
-        <%= label_tag :description %>
-        <%= text_field_tag :description, @pet.description %>
+      <div>
+        <p>Age:</p>
+        <%= text_field_tag :age, @pet.age, class: "formField" %>
       </div>
-
-      <div class="formField">
-        <%= label_tag :age %>
-        <%= text_field_tag :age, @pet.age %>
+      <div>
+        <p>Sex:</p>
+        <%= text_field_tag :sex, @pet.sex, class: "formField" %>
       </div>
-
-      <div class="formField">
-        <%= label_tag :sex %>
-        <%= text_field_tag :sex, @pet.sex %>
+      <div>
+        <p>Status:</p>
+        <%= text_field_tag :status, @pet.status, class: "formField" %>
       </div>
-
-      <div class="formField">
-        <%= label_tag :status %>
-        <%= text_field_tag :status, @pet.status %>
+      <div>
+        <p>Image Link:</p>
+        <%= text_field_tag :image, @pet.image, class: "formField" %>
       </div>
-
-      <div class="formField">
-        <%= submit_tag 'Update Pet' %>
+      <div>
+      <%= submit_tag 'Update Pet', class: "button" %>
       </div>
     <% end %>
   </div>
