--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -1,4 +1,4 @@
-<div class="applicationBlock">
+<div class="formTemplate">
   <%= form_tag "/applications", method: :post do %>
     <h1>Who would you like to adopt today?</h1>
     <% @pets.each do |pet| %>
@@ -7,29 +7,34 @@
         <%= check_box_tag "adopt_pets[]", pet.id %>
       </div>
     <% end %>
-
-    <h3>Please tell us about yourself:</h3>
-    <%= label_tag :name %>
-    <%= text_field_tag :name %>
-
-    <%= label_tag :address %>
-    <%= text_field_tag :address %>
-
-    <%= label_tag :city %>
-    <%= text_field_tag :city %>
-
-    <%= label_tag :state %>
-    <%= text_field_tag :state %>
-
-    <%= label_tag :zip %>
-    <%= text_field_tag :zip %>
-
-    <%= label_tag :phone %>
-    <%= text_field_tag :phone %>
-
-    <%= label_tag :description %>
-    <%= text_area_tag :description %>%
-
-    <%= submit_tag 'Submit Application' %>
-  <% end %>
+      <div>
+        <p>Name</p>
+        <%= text_field_tag :name, nil, placeholder: 'What are your first and last names?', class: "formField" %>
+      </div>
+      <div>
+        <p>Address:</p>
+        <%= text_field_tag :address, nil, placeholder: 'Home  address?', class: "formField" %></div>
+      <div>
+        <p>City:</p>
+        <%= text_field_tag :city, nil, placeholder: 'City where you live?', class: "formField" %>
+      </div>
+      <div>
+        <p>State:</p>
+        <%= text_field_tag :state, nil, placeholder: 'State?', class: "formField" %>
+      </div>
+      <div>
+        <p>Zip:</p>
+        <%= text_field_tag :zip, nil, placeholder: 'The zip code?', class: "formField" %></div>
+      <div>
+        <p>Phone:</p>
+        <%= text_field_tag :phone, nil, placeholder: 'Best phone number to call?', class: "formField" %>
+      </div>
+      <div>
+        <p>Description:</p>
+        <%= text_field_tag :description, nil, placeholder: "Please tell us why you'd be a good forever home?", class: "formField" %>
+      </div>
+      <%= submit_tag 'Submit Application', class: "button" %>
+      </div>
+    <% end %>
+  </div>
 </div>
