--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -8,6 +8,7 @@ body {
 
 a {
   text-decoration: none;
+  color: rgba(55, 106, 184, 1.0)
 }
 
 a:hover {
@@ -35,19 +36,14 @@ a:hover {
   width: fit-content;
 }
 
-.formField {
-  width: 100px;
-  height: 50px;
-  border-radius: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 10px;
-}
-
-.formAlign {
-  width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
+.shadowSpacer {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  border-radius: 0.5em;
+  background-color: rgba(235, 235, 235, 0.2);
+  height: 0.5em;
+  width: 100%;
+  box-shadow: 0px 0px 4px 2px rgba(201, 201, 201, 0.5);
 }
 
 #flashMessage {
@@ -57,6 +53,10 @@ a:hover {
   margin-right: auto;
   border-radius: 10px;
   padding: 15px;
+}
+
+.effect1{
+  box-shadow: 0 10px 6px -6px #777;
 }
 
 .effect2
