--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -94,6 +94,8 @@
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
+  border-radius: 0px 0px 10px 10px;
+  overflow: hidden;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 0;
 }
