Update shelter show page to display 'Application Count:' instead of 'Applications'

--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -11,7 +11,7 @@
       <div class="shelterStatsBlock">
         <p>Total Pets: <%= @shelter.pet_count %></p>
         <p>Review Average: <%= @shelter.average_rating %></p>
-        <p>Applications: <%= @shelter.applications_count %></p>
+        <p>Applications Count: <%= @shelter.applications_count %></p>
       </div>
       <div class="shelterActionsBlock">
         <div class="shelterActions"><%= link_to 'Available Pets', "/shelters/#{@shelter.id}/pets" %></div>
