--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,45 +1,47 @@
 <div class="favoritePetsBlock">
-<% unless @favorites.contents.empty? == true %>
-  <div class="favoritePets">
-    <h1>Favorite Pets</h1>
+  <% unless @favorites.contents.empty? == true %>
+    <div class="favoritePets">
+      <h1>Favorite Pets</h1>
+      <% @pets.each do |pet| %>
+        <section id="favorites-<%= pet.id %>">
+          <h2><%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
+          <div class="effect2"><%= image_tag "#{pet.image}" %></div>
+        </section>
+      <% end %>
+      <%= link_to 'Adopt Pet(s)', "/applications/new" %>
+      <h3><%= link_to 'Remove all favorited pets', '/favorites', method: :delete  %></h3>
+    </div>
 
-    <% @pets.each do |pet| %>
-      <section id="favorites-<%= pet.id %>">
-        <h2><%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
-        <div class="effect2"><%= image_tag "#{pet.image}" %></div>
-      </section>
-    <% end %>
-    <%= link_to 'Adopt Pet(s)', "/applications/new" %>
-    <h3><%= link_to 'Remove all favorited pets', '/favorites', method: :delete  %></h3>
-  </div>
-  <div class="noPetFavorites">
   <% else %>
-    <h2>No Pets to Display. Please add some pets to your favorites!</h2>
+    <div class="noPetFavorites">
+      <h2>No Pets to Display. Please add some pets to your favorites!</h2>
+    </div>
   <% end %>
-  </div>
-</div>
 
-<div class="petsWithApplications">
-  <% if @pet_apps.empty? == false %>
-    <h1>Pets with pending adoption applications:</h1>
-    <% @pet_apps.uniq.each do |pet|  %>
-    <% if pet.pending_for == 'none' && pet.status == 'adoptable' %>
-      <div id="pet_<%= pet.id %>">
-        <%= link_to "#{pet.name}", "/pets/#{pet.id}" %>
-      </div>
-      <% end %>
-    <% end %>
-    <h1>Pets with approved adoption applications:</h1>
-    <section id="approved_adoption">
-      <% @approved_apps.each do |pet|  %>
-        <% if pet.pending_for != 'none' && pet.status == 'pending' %>
+  <div class="petsWithApplications">
+    <% if @pet_apps.empty? == false %>
+      <h1>Pets with pending adoption applications:</h1>
+      <% @pet_apps.uniq.each do |pet|  %>
         <div id="pet_<%= pet.id %>">
-        <%= link_to "#{pet.name}", "/pets/#{pet.id}" %>
+          <%= link_to "#{pet.name}", "/pets/#{pet.id}" %>
         </div>
-        <% end %>
       <% end %>
-    </section>
-  <% else @pet_apps.empty? == true %>
-    <h2>No pet applications submitted</h2>
-  <% end %>
+    <% else %>
+      <h2>No pet applications submitted</h2>
+    <% end %>
+  </div>
+
+
+  <section id="approved_adoption">
+    <% if @approved_apps.empty? == false %>
+      <h1>Pets with approved adoption applications:</h1>
+      <% @approved_apps.each do |pet|  %>
+        <div id="pet_<%= pet.id %>">
+          <%= link_to "#{pet.name}", "/pets/#{pet.id}" %>
+        </div>
+      <% end %>
+    <% else %>
+      <h2>No pet applications submitted</h2>
+    <% end %>
+  </section>
 </div>
